# basic_fastapi

./: docker-compose.yaml  pyproject.toml
fastapi_app/: .env.example  env.example  main.py
fastapi_app/alembic/: env.py
fastapi_app/alembic/versions/: 2025_11_20_1746-a4e846661707_init_migration.py
fastapi_app/api/: __init__.py
fastapi_app/api/v1/: router.py
fastapi_app/core/: config.py  cors.py  db.py  exceptions.py  logging.py  security.py
fastapi_app/core/logging_utils/: custom_handlers.py
fastapi_app/core/models/: __init__.py  base.py  db_helper.py  model_loader.py
fastapi_app/domains/auth/: deps.py  routes.py  service.py
fastapi_app/domains/users/: deps.py
fastapi_app/domains/users/models/: employee.py  permission.py  role.py  role_permission.py  user.py
fastapi_app/domains/users/repository/: user_repo.py
fastapi_app/domains/users/routes/: user_routes.py
fastapi_app/domains/users/schemas/: user.py
fastapi_app/domains/users/service/: user_service.py
fastapi_app/middleware/: request_logger.py
fastapi_app/utils/: __init__.py  hashing.py  naming.py
